[package]
name = "rust-mallet"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_mallet"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[features]
python = ["dep:pyo3"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
