[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyrmallet"
requires-python = ">=3.9"
version = "0.1.0"
description = "Fast LDA topic modeling — Python bindings for RustMallet"
license = { text = "MIT" }
dependencies = ["numpy"]

[tool.maturin]
features = ["python"]
module-name = "pyrmallet._rust_mallet"
profile = "release"
